--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/first-project-react/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Tasks APP</title>
     <script type="module" crossorigin src="/first-project-react/assets/index.8b48dd82.js"></script>
     <link rel="stylesheet" href="/first-project-react/assets/index.f59d3926.css">
   </head>
